rounding waterfall values

--- a/notebooks/waterfall.ipynb
+++ b/notebooks/waterfall.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -32,8 +32,8 @@
      "output_type": "stream",
      "text": [
       "total number of lines = 30197\n",
-      "number of lines left =  11721 ( 38.8151140842 % )\n",
-      "number of lines removed =  18476 ( 61.1848859158 % )\n"
+      "number of lines left =  11721 ( 38.82 % )\n",
+      "number of lines removed =  18476 ( 61.18 % )\n"
      ]
     },
     {
@@ -161,7 +161,7 @@
        "8   13.9047  0.939394  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +177,8 @@
     "\n",
     "lines_removed = len(df) - len(df_clean)\n",
     "\n",
-    "print \"number of lines left = \", len(df_clean), \"(\", float(len(df_clean))*100/len(df), \"% )\"\n",
-    "print \"number of lines removed = \", lines_removed, \"(\", float(lines_removed)*100/len(df), \"% )\"\n",
+    "print \"number of lines left = \", len(df_clean), \"(\", round(float(len(df_clean))*100/len(df), 2), \"% )\"\n",
+    "print \"number of lines removed = \", lines_removed, \"(\", round(float(lines_removed)*100/len(df), 2), \"% )\"\n",
     "\n",
     "df_clean.head()"
    ]
