ugly massive update

--- a/notebooks/PEACH/global_stats.ipynb
+++ b/notebooks/PEACH/global_stats.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -22,17 +22,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR_NEIGHBORS 144217\nHR_DISCOVERED 126906\nHR_DEVICE 144270\nSNAPSHOT 43402\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\n\nTotal net stats number: 419612\n"
+      "HR_NEIGHBORS 57387\nHR_DISCOVERED 152641\nHR_DEVICE 154698\nSNAPSHOT 53452\nEVENT_PATHCREATE 1403\nEVENT_PATHDELETE 1325\n\nTotal net stats number: 367454\n"
      ]
     }
    ],
    "source": [
-    "df_nbr = pd.read_csv(\"../data/hr_neighbors.csv\")\n",
-    "df_dev = pd.read_csv(\"../data/hr_device.csv\")\n",
-    "df_dis = pd.read_csv(\"../data/hr_discovered.csv\")\n",
-    "df_snp = pd.read_csv(\"../data/snapshot.csv\")\n",
-    "df_epc = pd.read_csv(\"../data/event_pathcreate.csv\")\n",
-    "df_epd = pd.read_csv(\"../data/event_pathdelete.csv\")\n",
+    "df_nbr = pd.read_csv(\"../data/PEACH/hr_neighbors.csv\")\n",
+    "df_dev = pd.read_csv(\"../data/PEACH/hr_device.csv\")\n",
+    "df_dis = pd.read_csv(\"../data/PEACH/hr_discovered.csv\")\n",
+    "df_snp = pd.read_csv(\"../data/PEACH/snapshot.csv\")\n",
+    "df_epc = pd.read_csv(\"../data/PEACH/event_pathcreate.csv\")\n",
+    "df_epd = pd.read_csv(\"../data/PEACH/event_pathdelete.csv\")\n",
     "\n",
     "df_nbr_cln = df_nbr.drop_duplicates(subset=[\"time\", \"mac\"])\n",
     "df_dis_cln = df_dis.drop_duplicates(subset=[\"time\", \"mac\"])\n",
