--- a/notebooks/global_stats.ipynb
+++ b/notebooks/global_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR_NEIGHBORS 446542\nHR_DISCOVERED 902103\nHR_DEVICE 58740\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\n\nTotal net stats number: 1409534\n"
+      "HR_NEIGHBORS 144217\nHR_DISCOVERED 126906\nHR_DEVICE 144270\nSNAPSHOT 43402\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\n\nTotal net stats number: 419612\n"
      ]
     }
    ],
@@ -30,22 +30,26 @@
     "df_nbr = pd.read_csv(\"../data/hr_neighbors.csv\")\n",
     "df_dev = pd.read_csv(\"../data/hr_device.csv\")\n",
     "df_dis = pd.read_csv(\"../data/hr_discovered.csv\")\n",
+    "df_snp = pd.read_csv(\"../data/snapshot.csv\")\n",
     "df_epc = pd.read_csv(\"../data/event_pathcreate.csv\")\n",
     "df_epd = pd.read_csv(\"../data/event_pathdelete.csv\")\n",
     "\n",
-    "df_nbr_cln = df_nbr.drop_duplicates(subset=[\"time\",\"mac\"])\n",
-    "df_dev_cln = df_dev.drop_duplicates(subset=[\"time\",\"mac\"])\n",
+    "df_nbr_cln = df_nbr.drop_duplicates(subset=[\"time\", \"mac\"])\n",
+    "df_dis_cln = df_dis.drop_duplicates(subset=[\"time\", \"mac\"])\n",
+    "df_dev_cln = df_dev.drop_duplicates(subset=[\"time\", \"mac\"])\n",
     "\n",
-    "print \"HR_NEIGHBORS\", len(df_nbr)\n",
-    "print \"HR_DISCOVERED\", len(df_dis)\n",
-    "print \"HR_DEVICE\", len(df_dev)\n",
+    "print \"HR_NEIGHBORS\", len(df_nbr_cln)\n",
+    "print \"HR_DISCOVERED\", len(df_dis_cln)\n",
+    "print \"HR_DEVICE\", len(df_dev_cln)\n",
+    "print \"SNAPSHOT\", len(df_snp)\n",
     "print \"EVENT_PATHCREATE\", len(df_epc)\n",
     "print \"EVENT_PATHDELETE\", len(df_epd)\n",
     "\n",
-    "total = len(df_nbr)+\\\n",
-    "        len(df_dis)+\\\n",
-    "        len(df_dev)+\\\n",
-    "        len(df_epc)\n",
+    "total = len(df_nbr_cln)+\\\n",
+    "        len(df_dis_cln)+\\\n",
+    "        len(df_dev_cln)+\\\n",
+    "        len(df_epc)+\\\n",
+    "        len(df_epd)\n",
     "            \n",
     "print \"\\nTotal net stats number:\", total"
    ]
