adding reliability section table

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -186,15 +186,17 @@
 \lorem
 
 \begin{table}
-    \begin{tabular}{|l|l|}
+    \begin{tabular}{|l|l|l|}
         \hline
-        reliability & XX\% (Arrived/Lost:   /)\\ \hline
-        average PDR & XX\% (Transmit/Fails: /)\\ \hline
-        latency     & XXXX~msec\\
+        {}	 							& PEACH 				  & EVALAB \\
+        \hline
+        reliability (Arrived/Lost) 		& 100\% (693,844/0) 	  & (419,612/1)\\ \hline
+        average PDR (Transmit/Fails) 	& 95\% (4,405,569/258778) & 85\% (22,869,461/3,412,059)\\ \hline
+        latency     					& 700~msec 				  & 800~msec\\
         \hline
     \end{tabular}
     \caption{The overall network performance in the 15-25 July 2016 period.}
-    \label{tab:net_stats}
+    \label{tab:net_stats_peach}
 \end{table}
 
 \lorem
