--- a/notebooks/global_stats.ipynb
+++ b/notebooks/global_stats.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR_NEIGHBORS 144217\nHR_DISCOVERED 126906\nHR_DEVICE 144270\nSNAPSHOT 43402\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\n\nTotal net stats number: 419612\n"
+      "HR_NEIGHBORS 144217\nHR_DISCOVERED 126906\nHR_DEVICE 144270\nSNAPSHOT 43402\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\nTEMPERATURE 44264\n\nTotal msg number: 463876\n"
      ]
     }
    ],
@@ -33,6 +33,7 @@
     "df_snp = pd.read_csv(\"../data/snapshot.csv\")\n",
     "df_epc = pd.read_csv(\"../data/event_pathcreate.csv\")\n",
     "df_epd = pd.read_csv(\"../data/event_pathdelete.csv\")\n",
+    "df_tmp = pd.read_csv(\"../data/temperature.csv\")\n",
     "\n",
     "df_nbr_cln = df_nbr.drop_duplicates(subset=[\"time\", \"mac\"])\n",
     "df_dis_cln = df_dis.drop_duplicates(subset=[\"time\", \"mac\"])\n",
@@ -44,14 +45,16 @@
     "print \"SNAPSHOT\", len(df_snp)\n",
     "print \"EVENT_PATHCREATE\", len(df_epc)\n",
     "print \"EVENT_PATHDELETE\", len(df_epd)\n",
+    "print \"TEMPERATURE\", len(df_tmp)\n",
     "\n",
     "total = len(df_nbr_cln)+\\\n",
     "        len(df_dis_cln)+\\\n",
     "        len(df_dev_cln)+\\\n",
     "        len(df_epc)+\\\n",
-    "        len(df_epd)\n",
+    "        len(df_epd)+\\\n",
+    "        len(df_tmp)\n",
     "            \n",
-    "print \"\\nTotal net stats number:\", total"
+    "print \"\\nTotal msg number:\", total"
    ]
   },
   {
