--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -56,7 +56,13 @@
 \end{frontmatter}
 
 \begin{abstract}
-\lorem
+Two wireless network sensors are deployed.
+One in a peach orchard and one in a office building.
+The two networks are collecting sensor values and network statistics.
+This paper presents an in-depth analysis of the statistics, in order to precisely understand the performance of the network.
+Nodes in the network exhibit an expected lifetime between 4 and 16~years, with an end-to-end reliability of 100\%.
+We show how -- contrary to popular belief -- wireless links are symmetric.
+Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$5 link changes per day in the entire network.
 \end{abstract}
 
 %==============================================================================
