adding evalab map

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -80,7 +80,7 @@ Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology i
 %======== front-page figure, do not move
 \begin{figure}
     \centering
-    \includegraphics[width=\columnwidth]{fake}
+    \includegraphics[width=0.5\columnwidth]{evalab_map_annotated}
     \caption{The wireless motes deployed in the peach orchard in Mendoza, Argentina.}
     \label{fig:orchard}
 \end{figure}
