adding assymetry content

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -438,7 +438,12 @@ This shows the ultra-low power consumption of the \smip network.
 \section{Not so Intuitive Results}
 \label{sec:notsointuitive}
 
-\lorem
+Results from Section~\ref{sec:intuitive} are ``intuitive'' is that they corroborate previous measurements~\cite{watteyne16peach} or confirm theoretical/lab results~\cite{watteyne10mitigating,watteyne09reliability,watteyne15industrial}.
+This section presents results which we believe go against popular belief.
+This classification is necessarily subjective.
+
+In Section~\ref{sec:symmetry}, we show that links are, in fact, symmetric.
+In Section~\ref{sec:net_stability}, we show that, through the use of TSCH, the low-power wireless topology is, in fact, extremely stable.
 
 %------------------------------------------------------------------------------
 \subsection{Link (A)Symmetry}
@@ -446,30 +451,42 @@ This shows the ultra-low power consumption of the \smip network.
 
 % what is reported
 
-\lorem
+Motes report the average RSSI value of the packets received from each neighbor in their \HRNEIGHBORS health reports.
+Because the network uses channel hopping, these reported RSSI values are also averaged over 15 IEEE802.15.4 frequencies~\cite{std_ieee802154_2011}.
+In this section, we use the term ``RSSI'' to denote the average RSSI over 15 frequencies.
 
 % what is asymmetry
 
-\lorem
+A common assumption is that links between neighbor low-power wireless devices are hugely asymmetric.
+That is, on a link between nodes $A$ and $B$, $A$ receives $B$'s link-layer frames with an RSSI very different from the frames $B$ receives from $A$.
+Numerous routing protocols (often standardized~\cite{rfc3626}) reuse that assumption and start with a costly step of filtering out asymetric links.
 
 % what we measure
 
-\lorem
+We look at the link statistics between the 18th of June 2016 and the 4th of July 2016 (16 days).
+The sample contains 411,132 \HRNEIGHBORS messages received from 14 DC9003 nodes (same hardware).
+During that period, 21~links are active with at least 250~transmissions for each link.
+For each of those links, we compute the difference between average RSSI in each directions.
+Results are presented in Fig.~\ref{fig:tab_symmetry}.
+
 \begin{figure}
     \includegraphics[width=0.5\columnwidth]{asymmetry_peach.eps}
     \includegraphics[width=0.5\columnwidth]{asymmetry.eps}
     \caption{
-        The difference in RSSI between the two directions of 20~wireless links
-        (links continuously active in the 18-25 June 2016 period).
-        The average value (the bar) is complemented with the standard deviation.
-        The color of the bar indicates sample size.
+        The difference in RSSI between the two directions of 7/12~wireless links in the PEACH/EVAlab deployment.
+        The violin plots show the distribution of the value and the standard deviation.
     }
     \label{fig:tab_symmetry}
 \end{figure}
 
 % discussion
 
-\lorem
+Fig.~\ref{fig:tab_symmetry} shows that the RSSI difference never exceeds a couple of dB.
+Looking at Fig.~\ref{fig:waterfall}, this translates into a handful of percentage points difference in PDR only.
+This means the links can be considered symmetric.
+This result is in-line with the physical phenomenon that the signal traveling from $A$ to $B$ undergoes the same attenuation as that from $B$ to $A$.
+This result would \textit{not} hold if the neighbor radios had a different transmit power or sensitivity.
+That being said, discussions on link symmetry at the routing layer is largely artificial, as any ``good'' medium access control (MAC) protocol uses link-layer acknowledgments.
 
 %------------------------------------------------------------------------------
 \subsection{Network Stability}
